objects/BC__c.object
<CustomObject>
    <description>Contains the list of BCs (Beauty Counselors).</description>
    <label>BC</label>
    <nameField>
        <label>BC Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>POS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current counter</label>
        <referenceTo>Store__c</referenceTo>
        <relationshipLabel>BCs</relationshipLabel>
        <relationshipName>BCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BC_Id__c</fullName>
        <label>BC Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Market</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>POS_Id__c</fullName>
        <label>POS Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adjointe</fullName>
                </value>
                <value>
                    <fullName>Bc Institut</fullName>
                </value>
                <value>
                    <fullName>Boutique en propre BE</fullName>
                </value>
                <value>
                    <fullName>Caissier</fullName>
                </value>
                <value>
                    <fullName>Conseillère</fullName>
                </value>
                <value>
                    <fullName>Contrôle de gestion</fullName>
                </value>
                <value>
                    <fullName>Informatique</fullName>
                </value>
                <value>
                    <fullName>INFORMATIQUE UR</fullName>
                </value>
                <value>
                    <fullName>Interimaire</fullName>
                </value>
                <value>
                    <fullName>Intérimaire +</fullName>
                </value>
                <value>
                    <fullName>Resp. Réseau</fullName>
                </value>
                <value>
                    <fullName>Responsable</fullName>
                </value>
                <value>
                    <fullName>Responsable marketing</fullName>
                </value>
                <value>
                    <fullName>Responsable Province</fullName>
                </value>
                <value>
                    <fullName>Responsable UR</fullName>
                </value>
                <value>
                    <fullName>Shop</fullName>
                </value>
                <value>
                    <fullName>Stagiaire</fullName>
                </value>
                <value>
                    <fullName>Stockiste</fullName>
                </value>
                <value>
                    <fullName>Stockiste Ur</fullName>
                </value>
                <value>
                    <fullName>Suggestion de commande</fullName>
                </value>
                <value>
                    <fullName>CS Agent Europe</fullName>
                    <label>CS Agent Europe (ASM)</label>
                </value>
                <value>
                    <fullName>CS Agent NorthAmerica</fullName>
                    <label>CS Agent NorthAmerica (ASM)</label>
                </value>
                <value>
                    <fullName>CS Manager Supplier Europe</fullName>
                    <label>CS Manager Supplier Europe (ASM)</label>
                </value>
                <value>
                    <fullName>CS Manager Supplier NorthAmerica</fullName>
                    <label>CS Manager Supplier NorthAmerica (ASM)</label>
                </value>
                <value>
                    <fullName>CS Agent Europe (LVMH CS)</fullName>
                </value>
                <value>
                    <fullName>CS Manager Supplier Europe (LVMH CS)</fullName>
                </value>
                <value>
                    <fullName>CS Agent Japan (ASM)</fullName>
                </value>
                <value>
                    <fullName>CS Manager Supplier Japan (ASM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leave_End_Date__c</fullName>
        <formula>Related_User__r.Leave_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>On_Leave_Status__c</fullName>
        <formula>Related_User__r.On_Leave_Status__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>On Leave Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leave_Start_Date__c</fullName>
        <formula>Related_User__r.Leave_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leave Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BC_Consolidated_Id__c</fullName>
        <description>Read-only field, filled by API User. Concatenates BC Id and BC Market in order to generate a unique identifier.</description>
        <externalId>true</externalId>
        <label>BC Consolidated Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>